--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 
 <html>
-<head>
-
-</head>
-
-<body>
-
-</body>
+    <body>
+        <header></header>
+        <form id="globalSubmit">
+            <label>Recherche globale:</label> <input type="text" name="globalSearch" id="globalSearch">
+            <input type="submit" value="Rechercher">
+        </form>
+        <footer></footer>
+    </body>
+    
 </html>
