--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <meta charset="utf-8">
 
 <html>
+    <head>
+        <title>Recherche multimédias</title>
+        <link rel="stylesheet" media="screen" type="text/css" href="css/style.css" />
+        <script type="text/javascript" src="js/jquery-2.1.0.js"></script>
+        <script type="text/javascript" src="js/cam.js"></script>
+    </head>
     <body>
         <header></header>
         <form id="globalSubmit">
@@ -10,5 +16,4 @@
         </form>
         <footer></footer>
     </body>
-    
 </html>
