--- a/index.html
+++ b/index.html
@@ -1,19 +1,73 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-
 <html>
-    <head>
-        <title>Recherche multimédias</title>
-        <link rel="stylesheet" media="screen" type="text/css" href="css/style.css" />
-        <script type="text/javascript" src="js/jquery-2.1.0.js"></script>
-        <script type="text/javascript" src="js/cam.js"></script>
-    </head>
-    <body>
-        <header></header>
-        <form id="globalSubmit">
-            <label>Recherche globale:</label> <input type="text" name="globalSearch" id="globalSearch">
-            <input type="submit" value="Rechercher">
-        </form>
-        <footer></footer>
-    </body>
+<head>
+    <title>Recherche multimédias</title>
+    <link rel="stylesheet" media="screen" type="text/css" href="css/style.css" />
+    <script type="text/javascript" src="js/jquery-2.1.0.js"></script>
+    <script type="text/javascript" src="js/cam.js"></script>
+</head>
+<body>
+    
+    <header></header>
+
+    <section class="left">
+        <article>
+            <h1>SCI, the Search CAM Interface</h1>
+            <h2>For Apache Solr, by CAM</h2>
+            <form id="globalSubmit">
+                <label for="globalSearch">Global Search :</label>
+                <input type="text" name="globalSearch" id="globalSearch" placeholder="Type any term of search">
+                <input type="submit" value="Search">
+            </form>
+        </article>
+        <article>
+            <!-- Remplir avec le javascript -->
+            <h2>Or use our advanced search</h2>
+            <form id="advancedSubmit">
+                <label for="role">Select a role :</label>
+                <select name="role">
+                    <option value="person">person</option>
+                </select>
+                 <label for="region">Select a region :</label>
+                <select name="region">
+                    <option value="vd">vd</option>
+                </select>
+                <label for="birthday">Select a birthdate :</label>
+                <select name="birthday">
+                    <option value="1980-1984">1980 to 1984</option>
+                </select>
+                <label for="groupname">Select a groupname :</label>
+                <select name="groupname">
+                    <option value="cam">cam</option>
+                </select>
+                <input type="submit" value="Search">
+            </form>
+        </article>
+        <nav>
+            <h2>Navigation</h2>
+            <p>There is xxx results</p>
+            <label for="display">Display</label>
+            <select name="display">
+                    <option value="display">0</option>
+            </select>
+            <p>results per page</p>
+            <input type="button" value="First page">
+            <input type="button" value="Previous">
+            <label for="number">Go to page n°</label>
+            <input type="number" name="number"/>
+            <input type="button" value="Next">
+            <input type="button" value="Last page">
+        </nav>
+    </section>
+
+    <section class="right">
+        <ul>
+
+        </ul>
+    </section>
+
+    <footer></footer>
+    
+</body>
 </html>
