MàJ index ->ajout scripte jsCnstructionHTML.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" media="screen" type="text/css" href="css/style.css" />
     <script type="text/javascript" src="js/jquery-2.1.0.js"></script>
     <script type="text/javascript" src="js/cam.js"></script>
+     <script type="text/javascript" src="js/jsConstructionHTML.js"></script>
     
 </head>
 <body>
