màj mineure : index.html + cam.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/cam.js"></script>
 	<script type="text/javascript" src="js/jsConstructionHTML.js"></script>
 	<script type="text/javascript" src="js/facet.js"></script>
+    <script type="text/javascript" src="js/pagination.js"></script>
 
 </head>
 
@@ -62,9 +63,11 @@
 			<h1>Navigation</h1>
 			<p>There is xxx results</p>
 			<label for="display">Display</label>
-			<select name="display" id="display">
-				<option value="display">0</option>
-				<option value="display">1</option>
+			<select id="display">
+				<option>1</option>
+				<option>5</option>
+                <option>10</option>
+                <option>20</option>
 			</select>
 			<p>results per page</p>
 			<input type="button" value="First page">
