màj des boutons dans index.js

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                 </select>
                 <p>results per page</p>
             </article>
-            <input type="button" value="First page">
-            <input type="button" value="Previous">
+            <input id="firstPage" type="button" value="First page">
+            <input id="previous"type="button" value="Previous">
             <label for="number">Go to page n°</label>
             <input id="goPage" type="number" name="number" />
-            <input type="button" value="Next">
-            <input type="button" value="Last page">
+            <input id="next" type="button" value="Next">
+            <input id="lastPage" type="button" value="Last page">
         </nav>
     </section>
 
