--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     </select>
                 </p>
                 <p class="city subfacet">
-                    <label for="region">Select a region :</label>
-                    <select name="region">
+                    <label for="city.region.code">Select a region :</label>
+                    <select name="city.region.code">
                         <option value="vd">vd</option>
                     </select>
                 </p>
