--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <nav>
             <h2>Navigation</h2>
             <article class="left displayNbResult">
-                <p class="numResults">There are no result to display</p>
+                <p class="numResults">There is no result to display</p>
             </article>
             <article class="right defineNbResult">
                 <label for="display">Display</label>
