--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p class="suborder person">
                     <label for="sortPerson">By:</label>
                     <select name="sortPerson">
-                        <option value="">Choose...</option>
+                        <option value="" selected>Choose...</option>
                         <option value="lastname">Lastname</option>
                         <option value="size">Height</option>
                     </select>
@@ -68,7 +68,7 @@
                 <p class="suborder city">
                     <label for="sortCity">By:</label>
                     <select name="sortCity">
-                        <option value="">Choose...</option>
+                        <option value="" selected>Choose...</option>
                         <option value="city.name">City name</option>
                         <option value="city.code">City code</option>
                     </select>
@@ -76,7 +76,7 @@
                 <p class="suborder media">
                     <label for="sortMedia">By:</label>
                     <select name="sortMedia">
-                        <option value="">Choose...</option>
+                        <option value="" selected>Choose...</option>
                         <option value="title">Title</option>
                         <option value="filesize">Filesize</option>
                     </select>
